tudo para a main